# AoC-Discord

./: .gitignore  pyproject.toml  readme.md  requirements.txt
src/AdventDiscord/: __init__.py  __main__.py  commands.py  config.py  conversations.py  data.json  filestuff.py  oandr.py  utils.py
