[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AdventDiscord"
version = "0.1"
description = "Advent of Code Data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aocd-example-parser>=2023.12.17",